--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
       <h1>Headline</h1>
     </header>
     <main class="iframe-container">
-      <iframe id="iframe" class="iframe" src="http://tutorial.test/JavaScript/redirect/iframe.html" allow="autoplay; fullscreen; picture-in-picture; gyroscope; accelerometer; clipboard-read; clipboard-write" allowfullscreen></iframe>
+      <iframe id="iframe" class="iframe" src="http://test-child.com/JavaScript/redirect/iframe.html" allow="autoplay; fullscreen; picture-in-picture; gyroscope; accelerometer; clipboard-read; clipboard-write" allowfullscreen></iframe>
     </main>
     <footer>
       <div>
